<resources>
    <string name="app_name">PerfumOs</string>

    <string name="session_expired">session_expired</string>
    <string name="alert">Alert</string>
    <string name="post_detail">Post Detail</string>
    <string name="please_try_again">Please try again</string>
    <string name="plz_wait">Plz wait</string>
    <string name="error_found">Error Found</string>
    <string name="forgot_password"><u>Forgot Password ?</u></string>
    <string name="forgot_password_without">Forgot Password ?</string>
    <string name="or_login"><u>or login with</u></string>
    <string name="hello_blank_fragment">Home Seeker fragment</string>
    <string name="fav_fragment">Fav  fragment</string>
    <string name="title_activity_job_deatils">JobDeatilsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tv1">SQR code will get generated for you and you are good to accept payments from customers</string>
    <string name="third_step">send audio and notes and in return get positive notes from customer</string>
    <string name="otp_text">Please enter the 6-digit code sent to your phone number +91XXXXXX7890 for verification.</string>
    <string name="sign_up"><u>SIGN UP</u></string>
    <string name="get_started">Get Started</string>
    <string name="home_title">Home</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="referral_code">Referral code(Optional)</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="today_s_quest">Today’s Quest</string>
    <string name="scan_a_perfume">Scan a Perfume</string>
    <string name="complete_the_tutorial">Complete the Tutorial</string>
    <string name="write_a_review">Write a Review</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="daily_leaderboard">Daily Leaderboard</string>
    <string name="view_all">View All</string>
    <string name="articles_for_you">Articles For you</string>
    <string name="my_collection">My Collection</string>
    <string name="wishlist">Wishlist</string>
    <string name="reviews">Reviews</string>
    <string name="badges_earned">Badges Earned</string>
    <string name="favorite">Favorites</string>
    <string name="center_the_fragrance_in_the_frame_nensuring_the_image_is_bright_amp_clear">Center the fragrance in the frame,\nensuring the image is bright &amp; clear</string>
    <string name="fresh">FRESH</string>
    <string name="citrus">CITRUS</string>
    <string name="dior">Dior</string>
    <string name="sauvage">Sauvage</string>
    <string name="main_accords">Main Accords</string>
    <string name="note_breakdown">Note Breakdown</string>
    <string name="description">Description</string>
    <string name="year_release">Year Release</string>
    <string name="fran_ois_demachy">François Demachy</string>


    <string name="settings">Settings</string>
    <string name="reminder">Reminder</string>
    <string name="share_app">Share App</string>
    <string name="change_language">Change Language</string>
    <string name="contact_us">Contact Us</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="term_of_use">Term of Use</string>
    <string name="log_out">Log out</string>
    <string name="send">Send</string>
    <string name="of_perfume_created"># of Perfume Created</string>
    <string name="perfumes_created">Perfumes Created</string>
    <string name="add_to_favourite">Add to Favourite</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_the_verification_code_we_just_sent_on_your_email_address">Enter the verification code we just sent on your email address.</string>
    <string name="verify">Verify</string>
    <string name="didn_t_received_code">Didn’t received code?</string>
    <string name="resend">Resend</string>
    <string name="create_new_password">Create new password</string>
    <string name="your_new_password_must_be_unique_from_those_previously_used">Your new password must be unique from those previously used.</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="your_password_has_been_changed_successfully">Your password has been changed successfully.</string>
    <string name="are_you_sure_to_log_out">Are you sure to Log out?</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_to_delete_account">Are you sure to Delete Account?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create New Account</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="hello_register_to_get_started">Hello! Register to\nget started</string>
    <string name="fullname">Fullname</string>
    <string name="email_address">Email Address</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_now">Login Now</string>
    <string name="account_created">Account Created</string>
    <string name="your_account_has_been_created_successfully">Your Account has been created successfully.</string>
    <string name="don_t_worry_it_occurs_please_enter_the_email_address_linked_with_your_account">Don\'t worry! It occurs. Please enter the email address linked with your account.</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="remember_password">Remember Password?</string>
    <string name="send_code">Send Code</string>
    <string name="password_changed">Password Changed!</string>
    <string name="back_to_login">Back to Login</string>
    <string name="route_progress">%1$d/6</string>
    <string name="chat_with_perfumos">Chat with Perfumos</string>
    <string name="REVIEWS">REVIEWS</string>
    <string name="info">INFO</string>
    <string name="notes">NOTES</string>
    <string name="confirm">Confirm</string>
    <string name="register">Register</string>
    <string name="take_a_photo">Take a Photo</string>
    <string name="search_a_perfume">Search a Perfume</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_picture">Change Picture</string>
    <string name="name">Name</string>
    <string name="fragrance_pyramid">Fragrance Pyramid</string>
    <string name="top">Top</string>
    <string name="bottom">Bottom</string>
    <string name="middle">Middle</string>
    <string name="classification">Classification</string>
    <string name="season_u"><u>Season</u></string>
    <string name="occasion_u"><u>Occasion</u></string>
    <string name="season">Season</string>
    <string name="similar_perfumes">Similar Perfumes</string>
    <string name="more_from_this_brand">More from this brand</string>
    <string name="concentration">Concentration</string>
    <string name="compare_perfumes">Compare Perfumes</string>
    <string name="are_you_sure_to_change_language">Are you sure to change language?</string>
    <string name="back_to_homepage">Back To Homepage</string>
    <string name="add_to_collection">Add To Collection</string>
    <string name="addedInCollection">Remove from Collection</string>
    <string name="add_to_favorite">Add To Favorite</string>
    <string name="addedInFavorite">Remove from Favorite</string>
    <string name="add_to_wishlist">Add To Wishlist</string>
    <string name="add_in_wishlist">Remove from Wishlist</string>
    <string name="no_records">No records</string>
    <string name="perfumer">Perfumer</string>
    <string name="occasion">Occasion</string>
    <string name="play_earn_badges"><![CDATA[Play & Earn badges]]></string>
    <string name="notifications">Notifications</string>
    <string name="mark_all_as_read">Mark all as read</string>
    <string name="try_now">Try now</string>
    <string name="quiz">Quiz</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="quick_play">Quick Play</string>
    <string name="ranked">Ranked</string>
    <string name="quiz_types">Quiz Types</string>
    <string name="quiz_detail">Quiz Detail</string>
    <string name="questions">Questions</string>
    <string name="played">Played</string>
    <string name="shared">Shared</string>
    <string name="play_solo">Play Solo</string>
    <string name="play_with_friends">Play with Friends</string>
    <string name="join_game">Join Game</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="join_now">Join Now</string>
    <string name="enter_pin_to_join_game_or_scan_qr_code">Enter PIN to join game OR scan QR code</string>
    <string name="send_invite_amp_play_now"><![CDATA[Send Invite & Play Now]]></string>
    <string name="share_qr_code_amp_pin"><![CDATA[Share QR code & PIN]]></string>
    <string name="invite_friends">Invite Friends</string>
    <string name="tap_code_to_copy">Tap code to copy</string>
    <string name="pin_qr_code_are_unique_and_different_for_each_player_you_can_invite_your_friends_to_play_quizzes_on_one_server_with_the_code_above"><![CDATA[PIN & QR Code are unique and different\nfor each player, you can invite your\nfriends to play quizzes on one server\nwith the code above.]]></string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="waiting_for_players">Waiting for Players...</string>
    <string name="players_have_joined">Players have joined</string>
    <string name="joined">Joined</string>
    <string name="score">Score</string>
    <string name="done">Done</string>
    <string name="see_scoreboard">See Scoreboard</string>
    <string name="incorrect_answer">Incorrect Answer</string>
    <string name="badges">Badges</string>
    <string name="ranks">Ranks</string>
    <string name="perfumes_you_might_like">Perfumes you might like</string>
    <string name="review_title">Review Title</string>
    <string name="learn_ranks_amp_badges"><![CDATA[Learn Ranks & Badges]]></string>
    <string name="please_write_delete_to_confirm_you_want_to_delete_this_account">Please write DELETE to confirm you want to delete this account</string>
    <string name="delete">DELETE</string>
    <string name="publish_review">Publish Review</string>
    <string name="quiz_scoreboard">Quiz Scoreboard</string>
    <string name="scan_the_qr_code">Scan the QR code</string>
    <string name="play_now">Play Now</string>
</resources>