<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="callback"
            type="com.tech.perfumos.utils.BaseCustomDialog.Listener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/rounded_background_setting_white_70">

       <!-- <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:elevation="0dp"
            app:cardCornerRadius="@dimen/_12sdp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.tech.perfumos.utils.blur_folder.BlurView
                android:id="@+id/mainLayout"
                blurView="@{true}"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </androidx.cardview.widget.CardView>-->


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/reminder_tv"
                style="@style/CustomAliceTextview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center|start"
                android:text="@string/are_you_sure_to_delete_account"
                android:textColor="@color/home_heading"
                android:textSize="@dimen/_14ssp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/confirm_password"
                style="@style/CustomAliceTextview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="center|start"
                android:text="@string/please_write_delete_to_confirm_you_want_to_delete_this_account"
                android:textColor="@color/home_heading"
                android:textSize="@dimen/_12ssp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reminder_tv" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/newPassword"
                style="@style/CustomAliceEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_9sdp"
                android:background="@drawable/changepass_background"
                android:gravity="start|center"
                android:hint="@string/delete"
                android:inputType="text"

                android:paddingLeft="@dimen/_10sdp"
                android:textSize="@dimen/_10ssp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/confirm_password" />

            <LinearLayout
                android:id="@+id/logout"
                android:layout_width="0dp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/logout_drawable"
                android:onClick="@{v->callback.onViewClick(v)}"
                app:layout_constraintEnd_toStartOf="@+id/cancel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/newPassword">

                <TextView

                    style="@style/CustomAliceTextview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/confirm"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="normal" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_height="@dimen/_30sdp"

                android:layout_marginHorizontal="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/bg_text_view_frame"
                android:onClick="@{v->callback.onViewClick(v)}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/logout"
                app:layout_constraintTop_toBottomOf="@+id/newPassword">

                <TextView

                    style="@style/CustomAliceTextview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textColor="@color/color_forget_pass"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="normal" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>